samples/_failures_safe/1761565149_d7c195_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37282a2d.c: In function ‘main’:
./samples/SAFE/__tmp_37282a2d.c:142:9: error: expected declaration or statement at end of input
  142 |         printf("Invalid input for columns\n");
      |         ^~~~~~
./samples/SAFE/__tmp_37282a2d.c:142:9: error: expected declaration or statement at end of input
